# VibePlugin

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
.github/workflows/: gallery.yml  release.yml
cmake/: copy_compiler.cmake
compiler/: README.md  asc-driver.mjs  build.sh
docs/: index.html  modeling-targets.md  releases.html
docs/assets/: releases.js  site.js  styles.css
docs/gallery/: README.md  app.js  index.html  play.html  player.js  style.css  worklet.js
docs/gallery/data/: acid-bass.vstai  additive.vstai  air-exciter.vstai  air-lift.vstai  amber-crunch.vstai  analog-bucket.vstai  analog-poly.vstai  arc-poly.vstai  atrium.vstai  aurora-va.vstai  bark-beat.vstai  bender-fuzz.vstai  bias-tremolo.vstai  bit-crusher.vstai  blue-flanger.vstai  bolt-mono.vstai  boreal.vstai  brass-eight.vstai  brickwall.vstai  brit-distortion.vstai  bucket-echo.vstai  bus-glue.vstai  byte-beat.vstai  cascara.vstai  choral-bank.vstai  cinematic-poly.vstai  classic-beats.vstai  clav.vstai  clip-stage.vstai  combo-organ.vstai  comet-six.vstai  compander.vstai  console-eq.vstai  cosmo-poly.vstai  cozy-delay.vstai  crisp-beat.vstai  crossover.vstai  crunch-distortion.vstai  crush-comp.vstai  crystal-station.vstai  (+176 more)
docs/gallery/samples/: index.json
factory/: README.md
factory/plugins/acid-bass/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/additive-synth/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/air-exciter/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/air-lift/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/amber-crunch/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/analog-bucket/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/analog-poly/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/arc-mono/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/atrium/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/aurora-va/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bark-beat/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bender-fuzz/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bias-tremolo/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bit-crusher/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/blue-flanger/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bolt-mono/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/boreal/: assembly.ts  gui.html  spec.json  test.html
factory/plugins/brass-eight/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/brickwall/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/brit-distortion/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bucket-echo/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/bus-glue/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/byte-beat/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/cascara/: assembly.ts  gui.html  spec.json  test.html
factory/plugins/choral-bank/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/cinematic-poly/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/classic-beats/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/clav-funk/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/clip-stage/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/combo-organ/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/comet-six/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/compander/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/console-eq/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/cosmo-poly/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/cozy-delay/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/crisp-beat/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/crossover/: assembly.ts  gui.html  spec.json  test.html
factory/plugins/crunch-distortion/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/crush-comp/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/plugins/crystal-station/: README.md  assembly.ts  gui.html  spec.json  test.html
factory/tools/: SAMPLE_TEMPLATE.ts  pack-vstai.mjs  wasm-runner.mjs  wav-to-b64.mjs
scripts/: build-gallery.mjs  build.sh  ci.sh  common.sh  dev.sh  fl-rescan.sh  gen-samples.mjs  test.sh
scripts/seeds/: moog.html  moog.ts  pack-moog.mjs  pack-references.mjs
src/: AccountPanel.h  AppSettings.h  AssemblyScriptCompiler.cpp  AssemblyScriptCompiler.h  BridgeProtocol.h  BridgeShim.h  CloudClient.h  Config.example.h  Designs.h  DevLog.h  HistoryPanel.h  LicenseClient.h  LicensePanel.h  LlmClient.cpp  LlmClient.h  LockedEditor.cpp  LockedEditor.h  ManualPanel.h  PluginEditor.cpp  PluginEditor.h  PluginExport.h  PluginProcessor.cpp  PluginProcessor.h  Prompt.h  Settings.h  SourceEditor.h  Spinner.h  StandardUi.h  StandardUiPanel.h  VstaiDocument.cpp  VstaiDocument.h  WasmAbi.h  WasmEngine.cpp  WasmEngine.h  WebAssets.h  WebEditor.cpp  WebEditor.h
tests/: engine_test.cpp
ui/: shell.css  shell.html  shell.js  standard.html
ui/designs/: bauhaus.html  brutalist.html  color-pop.html  glassmorphism.html  minimal.html  modern-flagship.html  neon-cyberpunk.html  skeuomorphic.html  terminal-phosphor.html  vintage-analog.html
wasm-template/: asconfig.json  package.json  tsconfig.json
wasm-template/assembly/: index.ts  synth.ts
web/: index.html
webplayer/: README.md  server.mjs
webplayer/public/: app.js  index.html  play.html  player.js  style.css
(+837 files in other folders)
